# mediana

./: CMakeLists.txt  README.md
benchmark/: bench.cpp
include/: med.h
tests/: CMakeLists.txt  testmain.cpp
